fixed banner on mobile browser

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,9 @@
+$smartbannerCloseMargin: 5px;
+$smartbannerCloseSize: 17px;
+$smartbannerIconMargin: 12px;
+$smartbannerIconSize: 57px;
+$smartbannerButtonSize: 110px;
+
 .smartbanner-show {
   margin-top: 80px;
 }
@@ -26,13 +32,13 @@
 
 .smartbanner-container {
   margin: 0 auto;
-  white-space: nowrap;
+  padding: 0 5px;
 }
 
 .smartbanner-close {
   display: inline-block;
   vertical-align: middle;
-  margin: 0 5px;
+  margin: 0 $smartbannerCloseMargin 0 0;
   font-family: 'ArialRoundedMTBold', Arial;
   font-size: 20px;
   text-align: center;
@@ -51,9 +57,9 @@
 .smartbanner-icon {
   display: inline-block;
   vertical-align: middle;
-  width: 57px;
-  height: 57px;
-  margin-right: 12px;
+  width: $smartbannerIconSize;
+  height: $smartbannerIconSize;
+  margin-right: $smartbannerIconMargin;
   background-size: cover;
   border-radius: 10px;
 }
@@ -61,22 +67,44 @@
 .smartbanner-info {
   display: inline-block;
   vertical-align: middle;
-  width: 44%;
+  width: calc(99% - #{$smartbannerCloseMargin} - #{$smartbannerCloseSize} - #{$smartbannerIconMargin} - #{$smartbannerIconSize} - #{$smartbannerButtonSize});
   font-size: 11px;
   line-height: 1.2em;
   font-weight: bold;
 }
 
+.smartbanner-wrapper {
+  max-width: $smartbannerButtonSize;
+  display: inline-block;
+  text-align: right;
+  width: 100%;
+}
+
 .smartbanner-title {
   font-size:13px;
   line-height: 18px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.smartbanner-description {
+    max-height: 40px;
+    overflow: hidden;
+}
+
+.smartbanner-author {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden; 
+  &:empty {
+    + .smartbanner-description {
+      max-height: 50px;
+    }
+  }
 }
 
 .smartbanner-button {
-  position: absolute;
-  right: 20px;
-  top: 0;
-  bottom: 0;
   margin: auto 0;
   height: 24px;
   font-size: 14px;
@@ -169,9 +197,10 @@
 
 .smartbanner-android .smartbanner-close {
   border: 0;
-  width: 17px;
-  height: 17px;
-  line-height: 17px;
+  max-width: $smartbannerCloseSize;
+  width: 100%;
+  height: $smartbannerCloseSize;
+  line-height: $smartbannerCloseSize;
   margin-right: 7px;
   color: #b1b1b3;
   background: #1c1e21;
